[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "debugenv"
version = "1.0.0"
description = "OpenEnv-compliant environment for training AI agents to debug code"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "openai==1.51.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Srijan0x/debugenv"
Repository = "https://github.com/SrijanAI/debugenv"
